Fix für Cross Origin und neues Widget Demo
